implemented makefile version

--- a/server-config/nginx/nginx.conf
+++ b/server-config/nginx/nginx.conf
@@ -1,14 +1,12 @@
-user  nginx;
 worker_processes  1;
+# daemon off; # Don't need to add because it gets appended by the docker image.
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-
 events {
-  worker_connections  1024;
+  worker_connections 1024;
 }
-
 
 http {
   include       /etc/nginx/mime.types;
@@ -25,8 +23,7 @@ http {
 
   keepalive_timeout  65;
 
-  #gzip  on;
+  # gzip  on;
 
-  # include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*;
 }
